<resources>
    <string name="app_name">Notepadv3</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_send">Send Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="NoteID">NoteID</string>
    <string name="title_activity_note_edit">EditNote</string>
    <string name="CategoryID">CategoryID</string>
    <string name="title_activity_cat_edit">EditCategory</string>
    <string name="edit_category">Edit Category</string>
    <string name="category">Category</string>

</resources>
